# ad_crypt

./: CMakeLists.txt  README.md
include/: ad_crypt.h
src/: ad_crypt.c
tests/: CMakeLists.txt  test_ad_crypt.cpp
